# kakoune-qml

./: .gitignore  .kakrc  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  EditorPane.qml  FocusableTile.qml  Info.qml  KakouneMenu.qml  KakounePane.qml  Makefile  Menu.qml  NestedHandle.qml  NestedLayout.qml  SingleWindow.qml  StatusBar.qml  Tile.qml  atom.js  boson.qml  boson.qrc  gridmain.qml  gridwindow.cpp  kakoune_alive_client_counter.h  kakoune_client.h  kakoune_client_factory.h  kakoune_server.h  key_helpers.js  main.cpp  mainwindow.qml  resources.qrc  singlemain.qml  singlewindow.cpp  splitmain.qml  splitwindow.cpp  splitwindow_resources.qrc
